# FiveAxisSimCore

./: .gitignore  LICENSE  README.md  config.py  cutter.py  pyproject.toml  sdfer.py  simulate.py  voxelizer.py
assets/gcode/: test.ncc
utils/: backend.py  gcode_reader.py  logger.py  mesh_convert.py
